--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,8 +1,31 @@
 * {
+    color: black;
+}
+
+p {
     font-family: 'Merriweather', serif;
     font-weight: bold;
 }
 
 footer {
-    padding: 50px;
+    padding: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    -webkit-box-shadow: 0px 20px 52px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 20px 52px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 20px 52px 0px rgba(0,0,0,0.75);
+}
+
+.links > ul{
+    list-style: none;
+    display: flex;
+
+    a {
+        padding: 5px;
+    }
+}
+
+i {
+    font-size: 1.2em;
 }
