--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -9,12 +9,12 @@ main {
 
     #banner {
         padding: 0px;
-        display: grid;
         grid-template-columns: 50% 50%;
         justify-content: space-between;
 
         #banner-text {
           padding: 75px;
+          width: 100%;
 
           #main-header {
                 font-size: 2em;
@@ -23,11 +23,15 @@ main {
     }
 
     #projects {
-        padding: 0 50px;
+        padding: 25px 25px;
+
+        h3 {
+            padding-bottom: 10px;
+        }
 
         #container {
             display: grid;
-            grid-template-columns: repeat(3, 33%);
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
         }
     }
 }
