--- a/src/app/components/project/project.component.scss
+++ b/src/app/components/project/project.component.scss
@@ -10,8 +10,21 @@
         padding-top: 10px;
         padding-bottom: 10px;
     }
+}
 
+.img-container {
+    position: relative;
+  
+    &::after {
+        content: "";
+        display: block;
+        padding-bottom: 100%;
+    }
+  
     img {
-        width: 100%;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 }
